[package]
name = "standard-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = { version = "0.20", features = ["csr"] }
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# yew-router = "0.17"
yew-router = { git = "https://github.com/yewstack/yew.git" }

# yew = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
gloo-utils = "0.1.5"
gloo-console = "0.2.3"
serde = "1.0.147"
serde_json = "1.0.87"
# markdown-to-html = "0.1.3"
markdown-it = "0.4.0"
substring = "1.4.5"


[dependencies.web-sys]
version = "0.3.60"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Storage",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'File',
    'Window',
    "Clipboard",
    "Blob",
    "HtmlSelectElement",
    "FormData",
#    "Document",
#    "HtmlElement",
#    "MouseEvent",
#    "DomRect",
]
